--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "author": "GoDaddy Operating Company, LLC",
   "license": "MIT",
   "dependencies": {
-    "request": "^2.88.0",
-    "request-promise": "^4.2.5"
+    "axios": "^0.19.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
