--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "type": "git",
     "url": "https://github.com/godaddy/split-node-serializer.git"
   },
+  "files": [
+    "lib"
+  ],
   "keywords": [],
   "author": "GoDaddy Operating Company, LLC",
   "license": "MIT",
