--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,6 +1,12 @@
 name: 'CICD'
 
-on: ['push', 'pull_request']
+on:
+  push: 
+    branches:
+    - main
+  pull_request:
+    branches: 
+    - main
 
 jobs:
   build:
